--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -1002,6 +1002,9 @@ content: "";
 
 			.field--type-image:after {
 				box-shadow: inset 0 0 0 10px $yellow;
+				outline: 1px solid $yellow;
+    			margin-left: 1px;
+    			width: calc(100% - 2px);
 			}
 		}
 
@@ -1014,6 +1017,9 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $terra_cotta;
+					outline: 1px solid $terra_cotta;
+    				margin-left: 1px;
+    				width: calc(100% - 2px);
 				}
 			}
 		}
@@ -1026,6 +1032,7 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $blue;
+					border-bottom: 1 px solid $blue;
 				}
 			}
 		}
@@ -1038,6 +1045,7 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $turquoise;
+					border-bottom: 1 px solid $turquoise;
 				}
 			}
 		}
@@ -1050,6 +1058,7 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $olive;
+					border-bottom: 1 px solid $olive;
 				}
 			}
 		}
@@ -1062,6 +1071,7 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $orange;
+					border-bottom: 1 px solid $orange;
 				}
 			}
 		}
@@ -1074,6 +1084,9 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $plum;
+					outline: 1px solid $plum;
+    				margin-left: 1px;
+    				width: calc(100% - 2px);
 				}
 			}
 		}
@@ -1086,6 +1099,7 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $tan;
+					border-bottom: 1 px solid $tan;
 				}
 			}
 		}
@@ -1098,6 +1112,7 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $lime;
+					border-bottom: 1 px solid $lime;
 				}
 			}
 		}		
